--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>User:</strong>
-  <%= @question.user_id %>
+  <strong>Title:</strong>
+  <%= @question.title %>
 </p>
 
 <p>
@@ -11,9 +11,11 @@
 </p>
 
 <p>
-  <strong>Title:</strong>
-  <%= @question.title %>
+  <strong>Submitted By:</strong>
+  <%= @question.user.email %>
 </p>
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
+
+<%= render partial: "answers/index", locals: { answers: @question.answers } %>
