--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,21 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @question.title %>
-</p>
+<h1> <%= @question.title %> </h1> 
+<p><%= @question.body %></p>
 
 <p>
-  <strong>Body:</strong>
-  <%= @question.body %>
-</p>
-
-<p>
-  <strong>Submitted By:</strong>
-  <%= @question.user.email %>
+  <strong>Submitted By:</strong> <%= @question.user.email %>
 </p>
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
-<%= link_to 'Back', questions_path %>
+<%= link_to 'Back to Questions Index', questions_path %>
 
 <%= render partial: "answers/index", locals: { answers: @question.answers } %>
