--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1> <%= @question.title %> </h1> 
-<p><%= @question.body %></p>
+<p>
+	<%= @question.body %>
+</p>
 
 <p>
   <strong>Submitted By:</strong> <%= @question.user.email %>
