--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,13 +1,11 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Questions</h1>
 
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Body</th>
       <th>Title</th>
+      <th>Body</th>
+      <th>Submitter</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,9 +13,9 @@
   <tbody>
     <% @questions.each do |question| %>
       <tr>
-        <td><%= question.user_id %></td>
+        <td><strong><%= question.title %><strong></td>
         <td><%= question.body %></td>
-        <td><%= question.title %></td>
+        <td><%= question.user.email %></td>
         <td><%= link_to 'Show', question %></td>
         <td><%= link_to 'Edit', edit_question_path(question) %></td>
         <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
