--- a/app/views/layouts/_greeting.html.erb
+++ b/app/views/layouts/_greeting.html.erb
@@ -1,7 +1,9 @@
+<br><br>
 <div id="greeter-box">
 	<% if current_user %>
-		Welcome, <%= current_user.email %>.
+		Logged in as: <%= current_user.email %>
+		<%= button_to "Log Out", destroy_user_session_url, method: :delete%>
 	<% else %>
-		<%= link_to 'Sign In', new_user_session_url %> | <%= link_to 'Sign Up', new_user_registration %>
+		<%= link_to 'Sign In', new_user_session_url %> | <%= link_to 'Sign Up', new_user_registration_url %>
 	<% end %>
 </div>
