--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -13,5 +13,5 @@
   <%= @answer.body %>
 </p>
 
-<%= link_to 'Edit', edit_answer_path(@answer) %> |
-<%= link_to 'Back', answers_path %>
+<%= link_to 'Edit', edit_question_answer_path(@answer) %> |
+<%= link_to 'Back', question_path(@answer.question_id) %>
