--- a/app/views/answers/_index.html.erb
+++ b/app/views/answers/_index.html.erb
@@ -5,12 +5,12 @@
     <p><pre class="prettyprint"><%= answer.body %></pre></p>
     <p> <strong>Submitted By:</strong> <%= answer.user.email %> </p>
     <p>
-      <%= link_to 'Show', answer %> | <%= link_to 'Edit', edit_answer_path(answer) %> | <%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= link_to 'Show', question_answer_path(answer) %> | <%= link_to 'Edit', edit_question_answer_path(answer) %> | <%= link_to 'Destroy', question_answer_path(answer), method: :delete, data: { confirm: 'Are you sure?' } %>
     </p>
   </div>
 <% end %>
 
-<%= link_to 'Submit New Answer', new_answer_path %>
+<%= link_to 'Submit New Answer', new_question_answer_path(question) %>
 
 <br>
 
