--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', answer: @answer %>
 
-<%= link_to 'Show', @answer %> |
-<%= link_to 'Back', answers_path %>
+<%= link_to 'Show', question_answer_path(@answer) %> |
+<%= link_to 'Back', question_path(@answer.question) %>
