--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,3 +1,3 @@
-<%= render 'form', answer: @answer, question: @question %>
+<%= render partial: 'answers/form', locals: { answer: @answer, question: @question } %>
 
 <%= link_to 'Back', question_path(@question) %>
