--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,4 +3,4 @@
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back to Questions Index', questions_path %>
 
-<%= render partial: "answers/index", locals: { answers: @question.answers, question: @question } %>
+<%= render partial: "answers/index", locals: { answers: @question.ranked_answers, question: @question } %>
