--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the answers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.answer-index-item {
+	display :flex;
+	flex-direction: row;
+	justify-content: center;
+
+}
+
+.answer-index-item.vote-box {
+	flex: 1;
+}
