--- a/app/views/answers/_index.html.erb
+++ b/app/views/answers/_index.html.erb
@@ -1,17 +1,21 @@
 <h2>Answers</h2>
 
 <% answers.each do |answer| %>
-  <div class="answer-block">
-  	<div class="vote-box">
-	  	<%= button_to "+1", answer_upvote_path(answer) %>
-	  	<p>Votes: <%= answer.score %> (+<%= answer.get_upvotes.count %> / -<%= answer.get_downvotes.count %>)</p>
-	  	<%= button_to "-1", answer_downvote_path(answer) %>
-  	</div>
-    <p><pre class="prettyprint"><%= answer.body %></pre></p>
-    <p><strong>Submitted By:</strong> <%= answer.user.email %></p>
-    <p>
-      <%= link_to 'Show', question_answer_path(answer) %> | <%= link_to 'Edit', edit_question_answer_path(question, answer) %> | <%= link_to 'Destroy', question_answer_path(question, answer), method: :delete, data: { confirm: 'Are you sure?' } %>
-    </p>
+  <div class="answer-index-item">
+  	<div class="row"/>
+	  	<div class="vote-box">
+		  	<%= button_to "+1", answer_upvote_path(answer) %>
+		  	<p>Votes: <%= answer.score %> (+<%= answer.get_upvotes.count %> / -<%= answer.get_downvotes.count %>)</p>
+		  	<%= button_to "-1", answer_downvote_path(answer) %>
+	  	</div>
+	    <pre class="snippet prettyprint"><%= answer.body %></pre>
+    </div>
+    <div class="row">
+	    <p class="submitted-by"><strong>Submitted By:</strong> <%= answer.user.email %></p>
+	    <p class="link-box">
+	      <%= link_to 'Show', question_answer_path(answer) %> | <%= link_to 'Edit', edit_question_answer_path(question, answer) %> | <%= link_to 'Destroy', question_answer_path(question, answer), method: :delete, data: { confirm: 'Are you sure?' } %>
+	    </p>
+    </div>
   </div>
 <% end %>
 
