fix edit page and use answer item partial more

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "questions/show", locals: { question: @question } %> 
+<%= render partial: "questions/question", locals: { question: @question } %> 
 
 <%= form_for([question, answer]) do |f| %>
   <% if answer.errors.any? %>
