--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "questions/show", locals: {question: @question} %>
+<%= render partial: "questions/question", locals: {question: @question} %>
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back to Questions Index', questions_path %>
