reformatting and introducing user resources

--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -6,5 +6,4 @@
 <h2> Comments </h2>
 <p> Comments go here. </p>
 
-<%= link_to 'Edit', edit_question_answer_path(@answer) %> |
-<%= link_to 'Back', question_path(@answer.question_id) %>
+<%= link_to 'Back to Question', question_path(@answer.question_id) %>
