fix current_user nil on logout

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "questions/question", locals: {question: @question} %>
 
-<% if current_user.owns?(@question) %>
+<% if current_user && current_user.owns?(@question) %>
 	<%= link_to 'Edit', edit_question_path(@question) %> |
 <% end %>
 
