--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -13,9 +13,9 @@
     <p class="link-box">
       <% unless "#{params[:controller]}##{params[:action]}" == "answers#show" %>
         <%= link_to 'View Comments', question_answer_path(question, answer) %>
-        <%= current_user.owns?(answer) ? " | " : "" %>  
+        <%= current_user && current_user.owns?(answer) ? " | " : "" %>  
       <% end %>
-      <% if current_user.owns?(answer) %>
+      <% if current_user && current_user.owns?(answer) %>
       <%= link_to 'Edit', edit_question_answer_path(question, answer) %> | <%= link_to 'Destroy', question_answer_path(question, answer), method: :delete, data: { confirm: 'Are you sure?' } %>
       <% end %>
     </p>
