--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,4 +4,8 @@
 		<p><%= comment.comment %></p>
 	</div>
 	<p><%= comment.user.email %> (<%=comment.created_at%>)</p>
+	<% if current_user && current_user.owns?(comment) %> 
+    <%= link_to 'Edit', edit_question_comment_path(params[:question_id], comment) %> | 
+    <%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
+	<% end %>
 </div>
