--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Questions</h1>
+<%= render partial: "questions/search" %>
 
 <%= render partial: "questions/list", locals: { questions: @questions } %>
 
