--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_area :body %>
   </div>
 
+  <div class="field">
+    <%= f.label :tag_list %>
+    <%= f.text_field :tag_list %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
