--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(question) do |f| %>
-  <% if question.errors.any? %>
+<%= form_for(@question) do |f| %>
+  <% if @question.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(question.errors.count, "error") %> prohibited this question from being saved:</h2>
+      <h2><%= pluralize(@question.errors.count, "error") %> prohibited this @question from being saved:</h2>
 
       <ul>
-      <% question.errors.full_messages.each do |message| %>
+      <% @question.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -22,8 +22,12 @@
   </div>
 
   <div class="field">
-    <%= render partial: "tags/form", locals: { tags: @tags } %>
-  
+    <%= render partial: "tags/form" %>
+    <label for="new_tag_list">New Tags (separated by commas)</label>
+    <input
+      type="text"
+      name="new_tag_list"
+      id="new_tag_list" />
   </div>
 
   <div class="actions">
