--- a/app/views/questions/_search.html.erb
+++ b/app/views/questions/_search.html.erb
@@ -5,5 +5,5 @@
     <option value="body">Content</option>
   </select>
   <input type='text' name='search_value'/>
-  <%= button_to '🔍', questions_path, { method: :get } %>
+  <%= button_to '🔍', questions_path, { method: :get, class: "search_btn" } %>
 </form>
