--- a/app/views/tags/_list.html.erb
+++ b/app/views/tags/_list.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="tags_container">
   <% tags.each do |tag| %>
     <li><%= render partial: "tags/tag", locals: { tag: tag } %></li>
   <% end %>
