--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -5,3 +5,16 @@
 .question > .body {
   white-space: pre-line;
 }
+
+input[name="search_value"] {
+  width: 230px;
+}
+
+.search_btn {
+  width: 40px;
+  height: 40px;
+  vertical-align: bottom;
+  display: inline-flex;
+  justify-content: center;
+  align-content: center;
+}
