--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the tags controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tags_container {
+  list-style: none;
+  border: dotted 2px black;
+  display: inline-flex;
+  flex-direction: row;
+  padding: 10px;
+  margin: 0;
+}
+
+.tags_container li {
+  margin: 0 10px;
+}
