--- a/app/views/layouts/_greeting.html.erb
+++ b/app/views/layouts/_greeting.html.erb
@@ -4,6 +4,7 @@
 		<%= button_to "Log Out", destroy_user_session_url, method: :delete %>
 		<%= button_to "Home", questions_url, method: :get %>
 	<% else %>
-		<%= link_to 'Sign In', new_user_session_url %> | <%= link_to 'Sign Up', new_user_registration_url %>
+		<%= link_to 'Sign In', new_user_session_url %>
+		<%= link_to 'Sign Up', new_user_registration_url %>
 	<% end %>
 </div>
